[package]
name = "derive_utils"
version = "0.12.0"
edition = "2018"
rust-version = "1.31"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/derive_utils"
keywords = ["enum", "macros", "derive"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
exclude = ["/.*", "/tools"]
description = """
A procedural macro helper for easily writing derive macros for enums.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
members = ["examples/example", "examples/example_derive"]

[lib]
doc-scrape-examples = false

# Note: proc-macro2, quote, and syn are public dependencies.
[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2.0.6", features = ["full"] }

[dev-dependencies]
example_derive = { path = "examples/example_derive" }
rustversion = "1"
trybuild = "1.0.49"
