[package]
name = "derive_utils"
version = "0.13.2"
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/taiki-e/derive_utils"
keywords = ["enum", "macros", "derive"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]
exclude = ["/.*", "/tools"]
description = """
A procedural macro helper for easily writing derive macros for enums.
"""

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[workspace]
resolver = "2"
members = ["examples/example", "examples/example_derive"]

[lib]
doc-scrape-examples = false

# Note: proc-macro2, quote, and syn are public dependencies.
[dependencies]
proc-macro2 = "1.0.60"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
example_derive = { path = "examples/example_derive" }
rustversion = "1"
trybuild = "1.0.49"
